--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.github.fondesa:kpermissions:3.3.0'
+
 }
